<resources>
    <string name="app_name">AdaTvLauncher</string>
    <string name="str_default_city">深圳</string>
    <string name="launcher_menu_media">多媒体</string>
    <string name="launcher_menu_teaching">白板教学</string>
    <string name="launcher_menu_teaching_resources">文件浏览器</string>
    <string name="launcher_menu_all_app">所有应用</string>
    <string name="launcher_menu_browser">浏览器</string>
    <string name="launcher_menu_book">WPS Office</string>
    <string name="launcher_menu_setting">设置</string>
    <string name="str_weather_network_error">天气数据获取失败，请检查网络！</string>
    <string name="str_weather_data_error">数据解析错误！</string>
    <string name="degree">&#176;</string>
    <string name="noAPP">没有安装应用!</string>
    <string name="no_signal">无信号</string>
    <string name="please_selecte_signal">请选择信号源</string>
    <string name="no_app">未安装该应用!</string>

</resources>
